<resources>
    <string name="app_name">GDSC Task App</string>
    <string name="hello">Hello Again!</string>
    <string name="welcome">Welcome back you\'ve been missed!</string>
    <string name="username">Enter username</string>
    <string name="pass">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="forgetPass">Recovery Password</string>
    <string name="continueWith">Or continue with</string>
    <string name="signIn">Sign In</string>
    <string name="member">Not a member?</string>
    <string name="reg">Register</string>
    <string name="helloUser">Hello User</string>
    <string name="alreadyUser">Already a user?</string>
    <string name="login">Login</string>
    <string name="email">Email address</string>
    <string name="start">Lets get started by registering yourself</string>
    <string name="introHead">Discover your Dream job here</string>
    <string name="introSubHead">Explore all the most exiting jobs roles based on you interest and study major</string>

</resources>