<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glass_img"
    tools:context=".LoginScreen">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="#cadae5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:fontFamily="@font/poppins_light"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:alpha="0.75"
        android:backgroundTint="#fff"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="username"
            android:background="@null"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#D9000000"
            android:textColorHint="#B3000000"
            android:textSize="15sp">

        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:alpha="0.75"
        android:backgroundTint="#fff"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:background="@null"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#D9000000"
            android:textColorHint="#B3000000"
            android:textSize="15sp">

        </EditText>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recoveryPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:alpha="0.6"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forgetPass"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#ff6d6d"
        android:outlineAmbientShadowColor="#ff6d6d"
        android:outlineSpotShadowColor="#ff6d6d"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveryPasswordTxt">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/grad_style_left"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCard">

    </View>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.6"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/continueWith"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCard">

    </TextView>

    <View
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/grad_style_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/loginCard">

    </View>

    <View
        android:id="@+id/loginWithGoogle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/google_logo"
        app:layout_constraintEnd_toStartOf="@+id/loginWithApple"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </View>

    <View
        android:id="@+id/loginWithApple"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/apple_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </View>

    <View
        android:id="@+id/loginWithFacebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/fb_logo"
        app:layout_constraintStart_toEndOf="@+id/loginWithApple"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </View>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/member"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithApple">

    </TextView>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:alpha="0.6"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/reg"
        android:textColor="#005EFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/loginWithApple">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>