<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glass_img"
    tools:context=".SignUpScreen">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="#cadae5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.75"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/helloUser"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toTopOf="@id/view2"
                app:layout_constraintVertical_bias="0.1">

            </TextView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:fontFamily="@font/poppins_light"
                android:text="@string/start"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@id/txt1">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:alpha="0.75"
                android:backgroundTint="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="username"
                    android:background="@null"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textColor="#D9000000"
                    android:textColorHint="#B3000000"
                    android:textSize="15sp">

                </EditText>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:alpha="0.75"
                android:backgroundTint="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:background="@null"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textColor="#D9000000"
                    android:textColorHint="#B3000000"
                    android:textSize="15sp">

                </EditText>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:alpha="0.75"
                android:backgroundTint="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:background="@null"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textColor="#D9000000"
                    android:textColorHint="#B3000000"
                    android:textSize="15sp">

                </EditText>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:alpha="0.75"
                android:backgroundTint="#fff"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="password"
                    android:background="@null"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/confirmPass"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textColor="#D9000000"
                    android:textColorHint="#B3000000"
                    android:textSize="15sp">

                </EditText>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/signUpCard"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="#ff6d6d"
                android:outlineAmbientShadowColor="#ff6d6d"
                android:outlineSpotShadowColor="#ff6d6d"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.9"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/signIn"
                    android:textColor="#fff"
                    android:textSize="20sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:alpha="0.6"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/alreadyUser"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@id/view2"
                app:layout_constraintHorizontal_bias="0.425"
                app:layout_constraintStart_toStartOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@+id/signUpCard">

            </TextView>

            <TextView
                android:id="@+id/newLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:alpha="0.6"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textColor="#005EFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/view2"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/signUpCard">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>