<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_pic"
    tools:context=".IntroductionScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="20dp"
        android:alpha="0.6"
        android:backgroundTint="#cadae5"
        android:outlineAmbientShadowColor="#fff"
        android:outlineSpotShadowColor="#fff"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/introHead"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toTopOf="@+id/cardView6">

    </TextView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/introSubHead"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

    </TextView>

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:alpha="0.15"
        android:background="@drawable/rnd_view"
        app:layout_constraintBottom_toBottomOf="@+id/cardView6"
        app:layout_constraintEnd_toEndOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

    </View>

    <androidx.cardview.widget.CardView
        android:id="@+id/introLoginCard"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#fff"
        android:outlineAmbientShadowColor="#fff"
        android:outlineSpotShadowColor="#fff"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.75"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/introSignInCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/introLoginCard"
        app:layout_constraintTop_toTopOf="@+id/view4">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>